# metricity_diplom

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
core/apps/accounts/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
core/apps/accounts/tests/: test_rating_services.py
core/apps/complaints/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
core/apps/complaints/management/commands/: seed_demo.py
core/apps/complaints/services/: __init__.py  geo.py  priority.py  querying.py  stacking.py  statuses.py
core/apps/complaints/tests/: test_ai_task.py  test_complaint_importance.py  test_complaint_list.py  test_complaint_status.py  test_geo.py  test_moderation_decision.py  test_permissions.py  test_priority.py  test_rating_business_events.py  test_stacking.py
core/apps/moderation/: __init__.py  admin.py  apps.py  models.py
core/project/: celery.py  settings.py  urls.py
docker_compose/: app.yaml  nginx.conf  storages.yaml
