[project]
name = "metricity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "environs>=14.6.0",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.2.0",
]
